표준화(standardization), 정규화(normalization)

--- a/lab_ml/ml01_numpy.ipynb
+++ b/lab_ml/ml01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGifGTcVLvc7qSOa47XN9I",
+      "authorship_tag": "ABX9TyPkGmx9TiUTVLt/8fatSKw6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2254,10 +2254,321 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## broadcast 활용\n",
+        "\n",
+        "*   표준화(standardization): 평균이 0이 되고 표준편차가 1이 되도록 값들을 변환.\n",
+        ">   $$z = \\dfrac{x - \\mu}{\\sigma}$$\n",
+        "*   정규화(normalization): 최솟값이 0이 되고 최댓값이 1이 되도록 값들을 변환.\n",
+        ">   $$x_{norm} = \\dfrac{x - x_{min}}{x_{max} - x_{min}}$$\n"
+      ],
+      "metadata": {
+        "id": "yoh2VV9CUHeG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1차원 배열 표준화"
+      ],
+      "metadata": {
+        "id": "GHdT_HKXWzR5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.arange(1, 6)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HhZJCctrPr0L",
+        "outputId": "c399f3b6-6192-4d9a-9f06-7fc5f1c21277"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mu = x.mean()   # 평균\n",
+        "print(mu)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tjOQEXsBW6fn",
+        "outputId": "44c57c21-8ea1-477c-88cc-1ba5e0127bea"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sigma = x.std()  # 표준편차(standard deviation)\n",
+        "print(sigma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4nQ1I6VHXEGO",
+        "outputId": "b48d0c38-5233-4b48-9455-c9c1ec62b35d"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_scaled = (x - mu) / sigma\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "os9XvXhwXWoW",
+        "outputId": "d3d139c2-4983-40b7-e1ce-8ed6df1a1443"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-1.41421356 -0.70710678  0.          0.70710678  1.41421356]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x_scaled.mean())\n",
+        "print(x_scaled.std())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yZN3OXivXhyW",
+        "outputId": "40e3b202-e375-47d3-bc33-927a4ec30570"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.0\n",
+            "0.9999999999999999\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1차원 배열 정규화"
+      ],
+      "metadata": {
+        "id": "EcTSYBJxZE5u"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nt0CGhLJZG_I",
+        "outputId": "02a0fe05-4d16-449b-ff1b-95c03fe7414f"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_norm = (x - x.min()) / (x.max() - x.min())\n",
+        "print(x_norm)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RzTg-UIjZH14",
+        "outputId": "187317bc-43ea-4ebe-c58e-9da388d2836f"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.   0.25 0.5  0.75 1.  ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2차원 배열에서의 표준화"
+      ],
+      "metadata": {
+        "id": "sMiHV9URbBkF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.arange(1, 13).reshape((4, 3))  # shape: (4, 3)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pYJq2SBEZYAY",
+        "outputId": "932a7027-6558-4631-89ad-171ba128f907"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3]\n",
+            " [ 4  5  6]\n",
+            " [ 7  8  9]\n",
+            " [10 11 12]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mu = x.mean()  # 파라미터 axis=None인 경우, 모든 원소(스칼라)들의 평균\n",
+        "print(mu)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_OnurJnObXeo",
+        "outputId": "874debe3-a497-4ce3-8703-b605eeecc581"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sigma = x.std()  # 파라미터 axis=None인 경우, 모든 원소(스칼라)들의 표준편차\n",
+        "print(sigma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TGXiG9aqc-fy",
+        "outputId": "c1bc6e3c-7031-4667-fb7f-56b9e61e73a7"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.452052529534663\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_scaled = (x - mu) / sigma\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E1SYGY03dW8x",
+        "outputId": "f488b9d1-ef87-470c-cfe4-bc656878d60f"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-1.59325501 -1.30357228 -1.01388955]\n",
+            " [-0.72420682 -0.43452409 -0.14484136]\n",
+            " [ 0.14484136  0.43452409  0.72420682]\n",
+            " [ 1.01388955  1.30357228  1.59325501]]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "HhZJCctrPr0L"
+        "id": "Is4x5YxCdeZh"
       },
       "execution_count": null,
       "outputs": []
