2d array 표준화, 정규화

--- a/lab_ml/ml01_numpy.ipynb
+++ b/lab_ml/ml01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPkGmx9TiUTVLt/8fatSKw6",
+      "authorship_tag": "ABX9TyP3uEhZkAKsP11cJ362Rm3v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2566,9 +2566,201 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# axis=0 축 방향으로 평균들을 계산\n",
+        "mu = x.mean(axis=0, keepdims=True)\n",
+        "print(mu)  # mu shape: (1, 3)"
+      ],
       "metadata": {
-        "id": "Is4x5YxCdeZh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Is4x5YxCdeZh",
+        "outputId": "3652b8fd-81d7-406a-a582-cbb9187fd6ca"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5.5 6.5 7.5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# axis=0 축 방향으로 표준편차들을 계산\n",
+        "sigma = x.std(axis=0, keepdims=True)\n",
+        "print(sigma)  # sigma shape: (1, 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FSxtGNilikC7",
+        "outputId": "351e12b7-2482-43c3-aa90-bcddc025182c"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[3.35410197 3.35410197 3.35410197]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# axis=0 축 방향으로 값들을 표준화\n",
+        "x_scaled = (x - mu) / sigma\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qFlPq-2lj_ur",
+        "outputId": "29c7ba2e-6bbf-4c4e-fbf0-f2c1f2b73064"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-1.34164079 -1.34164079 -1.34164079]\n",
+            " [-0.4472136  -0.4472136  -0.4472136 ]\n",
+            " [ 0.4472136   0.4472136   0.4472136 ]\n",
+            " [ 1.34164079  1.34164079  1.34164079]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# axis=1 축 방향으로 평균들을 계산\n",
+        "mu = x.mean(axis=1, keepdims=True)\n",
+        "print(mu)  # shape (4, 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zwuJ7VmokSui",
+        "outputId": "fcbb57db-7016-4a50-c59e-0d717e4dc300"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 2.]\n",
+            " [ 5.]\n",
+            " [ 8.]\n",
+            " [11.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x - mu"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1dpvvh-Rl_6t",
+        "outputId": "d4b055b0-8a9b-4547-da28-f207a7d02664"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.,  0.,  1.],\n",
+              "       [-1.,  0.,  1.],\n",
+              "       [-1.,  0.,  1.],\n",
+              "       [-1.,  0.,  1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# axis=1 축 방향으로 표준편차들을 계산\n",
+        "sigma = x.std(axis=1, keepdims=True)\n",
+        "print(sigma)  # shape (4, 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f8UZAWEtmfmE",
+        "outputId": "4591b249-68af-4bf0-d43c-9872ff6f181f"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.81649658]\n",
+            " [0.81649658]\n",
+            " [0.81649658]\n",
+            " [0.81649658]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_scaled = (x - mu) / sigma\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ihJrFWYvoBgl",
+        "outputId": "00eb39ef-b07a-4b97-ffbc-657e3ed2afa6"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-1.22474487  0.          1.22474487]\n",
+            " [-1.22474487  0.          1.22474487]\n",
+            " [-1.22474487  0.          1.22474487]\n",
+            " [-1.22474487  0.          1.22474487]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2차원 배열의 정규화"
+      ],
+      "metadata": {
+        "id": "v71eKAXLoaCl"
       },
       "execution_count": null,
       "outputs": []
