층화 추출(stratified sampling)

--- a/lab_ml/ml03_train_test.ipynb
+++ b/lab_ml/ml03_train_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyhZiO9cQXZUDDug6kBM2u",
+      "authorship_tag": "ABX9TyP5I8QAMMATt9xNQbMyMTZ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2423,9 +2423,318 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# 훈련 레이블에서 도미/빙어 빈도수 비율\n",
+        "pd.Series(y_train).value_counts(normalize=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "id": "OgCSdZE-FAWF",
+        "outputId": "6553d2b2-249e-4c68-f627-ccb8d3ab3828"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Bream    0.771429\n",
+              "Smelt    0.228571\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Bream</th>\n",
+              "      <td>0.771429</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Smelt</th>\n",
+              "      <td>0.228571</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 테스트 레이블에서 도미/빙어 비율\n",
+        "pd.Series(y_test).value_counts(normalize=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "id": "BfElL9rUJW0w",
+        "outputId": "93d92e98-dd91-4470-b09d-9f6875fb0a59"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Bream    0.571429\n",
+              "Smelt    0.428571\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Bream</th>\n",
+              "      <td>0.571429</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Smelt</th>\n",
+              "      <td>0.428571</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "임의 추출(random sampling)의 단점은 훈련 셋과 테스트 셋에서 각 클래스(도미/빙어)들의 비율이 비슷하지 않을 수도 있음. 머신 러닝 모델의 성능이 안 좋아질 수 있음. 이런 단점을 보완하는 추출 방식이 층화 추출."
+      ],
+      "metadata": {
+        "id": "IiJOgz6-J66Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 층화 추출(stratified sampling)"
+      ],
+      "metadata": {
+        "id": "X8mzG517LiD1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train, x_test, y_train, y_test = train_test_split(x, y,\n",
+        "                                                    train_size=35,\n",
+        "                                                    random_state=42,\n",
+        "                                                    stratify=y)"
+      ],
+      "metadata": {
+        "id": "9jt5qLW6JkAf"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`train_test_split()` 함수 파라미터:\n",
+        "*   가변길이 인수(`*arrays`): 훈련 셋과 테스트 셋으로 나눌 배열(들).\n",
+        "*   `test_size`: 테스트 셋의 샘플 개수(0 이상의 정수) 또는 비율(0.0 ~ 1.0).\n",
+        "    *   test_size를 설정하면 train_size는 자동으로 결정.\n",
+        "*   `train_size`: 훈련 셋의 샘플 개수 또는 비율.\n",
+        "    *   train_size를 설정하면 test_size는 자동으로 결정.\n",
+        "*   `random_state`: 난수를 생성할 때 사용할 seed 값.\n",
+        "*   `shuffle`: 샘플들을 무작위로 섞을 지 여부를 설정. 기본값은 True. random sampling이 기본 동작.\n",
+        "*   `stratify`: 층화 추출(stratified sampling)을 하기 위해서 각 클래스들의 비율을 알 수 있는 1차원 배열. 기본값은 None."
+      ],
+      "metadata": {
+        "id": "acpguOfJNi67"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련 레이블에서의 각 클래스 비율\n",
+        "pd.Series(y_train).value_counts(normalize=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "id": "x5F312lJMgdS",
+        "outputId": "6546387b-a343-47b6-b81e-38f511cdd8a8"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Bream    0.714286\n",
+              "Smelt    0.285714\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Bream</th>\n",
+              "      <td>0.714286</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Smelt</th>\n",
+              "      <td>0.285714</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 테스트 레이블에서의 각 클래스 비율\n",
+        "pd.Series(y_test).value_counts(normalize=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "id": "j9-3TPi7MkmQ",
+        "outputId": "78840811-0791-4d9f-97d9-bb36f7c69a86"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Bream    0.714286\n",
+              "Smelt    0.285714\n",
+              "Name: proportion, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>proportion</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Bream</th>\n",
+              "      <td>0.714286</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Smelt</th>\n",
+              "      <td>0.285714</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jgbuYDjE0miQ"
+        "id": "GOYaR61zNQFw"
       },
       "execution_count": null,
       "outputs": []
