회귀 평가 지표

--- a/lab_ml/ml05_regression.ipynb
+++ b/lab_ml/ml05_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOx6OfLQXDQYQvowM49sHt7",
+      "authorship_tag": "ABX9TyOwKvJJ5V20xxiTYB9C14oN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1517,13 +1517,255 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "# 회귀 모델의 평가 지표(metrics)"
+      ],
       "metadata": {
-        "id": "BKx_11EANNNo"
+        "id": "ReB4rIu_Opz3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   MSE(Mean Squared Errors): 오차들의 제곱의 평균.\n",
+        "*   RMSE(Root Mean Squared Errors): MSE의 제곱근.\n",
+        "*   MAE(Mean Absolute Errors): 오차들의 절댓값의 평균.\n",
+        "*   MSE, RMSE, MAE는 값이 작을 수록 좋은 점수, 값이 클 수록 나쁜 점수!\n",
+        "    *   일반적으로 점수(평가지표)는 값이 클 수록 좋은 점수, 값이 작을 수록 나쁜 점수.\n",
+        "    *   회귀 문제에서도 오차들이 작을 수록 점수가 커지는 평가지표를 개발 -> R2 score(결정 계수)\n",
+        "*   R2 score(결정계수): -무한대(infinite) ~ 1 사이의 값을 가질 수 있음.\n",
+        "    *   모든 수치를 오차없이 정확하게 예측한 경우 최댓값 1.\n",
+        "    *   오차들이 클 수록 결정계수는 작아짐."
+      ],
+      "metadata": {
+        "id": "DBHoc0htSURn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련 셋의 MSE\n",
+        "mean_squared_error(y_true=y_train, y_pred=train_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BKx_11EANNNo",
+        "outputId": "9037fa90-934a-435e-b312-ced3b60bc2da"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3716.5161904761903"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련 셋의 RMSE\n",
+        "np.sqrt(mean_squared_error(y_train, train_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BDsVO0e2WNEE",
+        "outputId": "dcc54a82-f846-460e-f971-85d0bd6edd5d"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(60.96323638453089)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련 셋의 MAE\n",
+        "mean_absolute_error(y_true=y_train, y_pred=train_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gqLeleNiWc5Q",
+        "outputId": "9d56872f-c1a2-4930-fe54-602048e66e74"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "35.76190476190476"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련 셋의 결정계수(R2 score)\n",
+        "r2_score(y_true=y_train, y_pred=train_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gEVJYhzLWlDE",
+        "outputId": "d31631d6-a413-4e7a-b945-b2f3ff26c5c2"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9698823289099254"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련된 KNN 모델에서 score 메서드를 호출 -> 결정계수 리턴.\n",
+        "knn.score(X=x_train, y=y_train)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RoozOXizW702",
+        "outputId": "f4ad8dd1-5076-4d8e-c52f-1822d293f3f9"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9698823289099254"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# KNN 모델에서 score 메서드를 호출해서 테스트 셋의 결정계수 계산\n",
+        "knn.score(X=x_test, y=y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1VMfQqXiYOVJ",
+        "outputId": "2999fe15-d734-48ff-8fde-120fd65a37aa"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.992809406101064"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "테스트 셋의 평가 점수가 훈련 셋에서의 평가 점수보다 더 좋은 --> 과소적합(under-fitting)"
+      ],
+      "metadata": {
+        "id": "SHgpyJVaYnjB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 테스트 셋의 MAE\n",
+        "mean_absolute_error(y_true=y_test, y_pred=test_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fJOa_0jqZAZl",
+        "outputId": "051ca059-51c8-4fab-b6e7-1d61772a254f"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19.157142857142862"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 테스트 셋의 MSE\n",
+        "mean_squared_error(y_true=y_test, y_pred=test_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lWnUVI50ZY7T",
+        "outputId": "21c0c7fc-ecf9-40af-9a3d-a94de897fa61"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "721.7385714285714"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     }
   ]
 }
