--- a/lab_ml/ml05_regression.ipynb
+++ b/lab_ml/ml05_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwKvJJ5V20xxiTYB9C14oN",
+      "authorship_tag": "ABX9TyNzcoi9E93FlulDdrseANgX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1540,6 +1540,45 @@
       ],
       "metadata": {
         "id": "DBHoc0htSURn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* $ y_i $ : $i$번째 샘플의 실젯값(label)\n",
+        "* $ \\hat{y_i} $ : $i$번째 샘플의 예측값\n",
+        "* $ \\bar{y} $ : 타겟의 평균값\n",
+        "* $ n $ : 샘플 개수\n",
+        "\n",
+        "* MAE(Mean Absolute Errors)\n",
+        "$$\n",
+        "MAE = \\frac{1}{n} \\sum_{i=1}^{n} \\lvert y_i - \\hat{y_i} \\rvert\n",
+        "$$\n",
+        "\n",
+        "* MSE(Mean Squared Errors)\n",
+        "$$\n",
+        "MSE = \\frac{1}{n} \\sum_{i=1}^{n} ( y_i - \\hat{y_i} )^2\n",
+        "$$\n",
+        "\n",
+        "* RMSE(Root Mean Squared Errors)\n",
+        "$$\n",
+        "RMSE = \\sqrt{ \\frac{1}{n} \\sum_{i=1}^{n} ( y_i - \\hat{y_i} )^2 }\n",
+        "$$\n",
+        "\n",
+        "* $ R^2 $ score(Coefficient of determinant, 결정 계수)\n",
+        "$$\n",
+        "R^2 = 1 - \\dfrac{\\text{MSE}}{\\text{Variance}}\n",
+        "    = 1 - \\dfrac{ \\sum_{i=1}^{n} (y_i - \\hat{y_i})^2 }\n",
+        "                { \\sum_{i=1}^{n} (y_i - \\bar{y})^2 }\n",
+        "$$\n",
+        "    * 결정 계수는 최댓값이 1이 되도록 만든 평가 지표.\n",
+        "    * 모델이 타겟을 오차없이 정확하게 예측하면, 실제값 - 예측값 = 0 이므로, 결정 계수는 최댓값 1이 됨.\n",
+        "    * 모델이 타겟을 매우 비슷하게 예측하면, 오차가 매우 작으면 분자가 0에 가까운 값이 되므로, 결정 계수는 1보다는 작지만 1에 가까운 값이 됨.\n",
+        "    * 모델이 타겟의 평균으로만 예측하는 정도라면, (분자) = (분모) 이므로, 결정 계수는 0이 됨.\n",
+        "    * 모델이 타겟의 평균 정도도 예측하지 못하면(오차가 매우 크면), (분자) > (분모)일 수 있고, 그런 경우 결정 계수는 음수가 될 수 있음."
+      ],
+      "metadata": {
+        "id": "ZvoJ_q2gaQiK"
       }
     },
     {
